[package]
authors = ["adelie"]
name = "ntk-rfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
log = "0.4.20"
simplelog = "0.12.1"
get-last-error = "0.1.1"
clap = { version = "4.4.10", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.31"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock"
]
